--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-http-proxy": "^1.2.0"
+    "express-http-proxy": "^1.2.0",
+    "express-ws": "^4.0.0"
   },
   "devDependencies": {},
   "license": "MIT"
